--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ google_analytics: UA-93492049-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://blog.kaiyilee.com
+url: http://www.kaiyilee.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
